--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "customize-cra": "^1.0.0",
     "formik": "^2.2.9",
     "i": "^0.3.7",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
